Upgrade Mockito to 2.20.1 for Java 11.
Fix unthrown checked exceptions in the mocks.

Other changes:
* Replace deprecated OBJECT_TYPE with OBJECT_TYPE_VALUE.
* Replace deprecated new Integer with Integer.valueOf.

Change-Id: I97f8a18d953a0c7d5f5efe5aa389518d9cb3cc05